# TPlatform

./: README.md
mapreduce2/: CMakeLists.install  CMakeLists.txt  README  project.el
mapreduce2/dev/: fault_tolerance.txt  mapreduce.dia  mapreduce.ygf  mapreduce_class.ygf
mapreduce2/distrib/: MakeCMakeFile4Examples.sh  job_spec_example.ini  mapred_master.ini  mapred_worker.ini
mapreduce2/distrib/script/: config.sh  restart.sh  shutdown.sh  startup.sh  status.sh
mapreduce2/src/app/: AppGen.pl  CMakeLists.examples.txt  CMakeLists.install  CMakeLists.txt  README
mapreduce2/src/app/MapRedJob/: MapReduceJobMain.cpp
mapreduce2/src/app/PageLen/: PageLen.cpp  PageLen.ini  PageLenMapper.cpp  PageLenMapper.hpp  PageLenReducer.cpp  PageLenReducer.hpp
mapreduce2/src/app/PageRank/: PageRankFirstMapper.cpp  PageRankFirstMapper.hpp  PageRankLatterMapper.cpp  PageRankLatterMapper.hpp  PageRankMain.cpp  PageRankParallel.cpp  PageRankReducer.cpp  PageRankValue.cpp  PageRankValue.hpp  PageRankValue2.cpp
mapreduce2/src/app/PageRank2/: PageRank.cpp  PageRankFirstMapper.cpp  PageRankLatterMapper.cpp  PageRankMain.cpp  PageRankParallel.cpp  PageRankReducer.cpp  PageRankValue.cpp  PageRankValue.hpp
mapreduce2/src/app/PageRank3/: PageRank.cpp  PageRankMain.cpp  PageRankMapper.cpp  PageRankMapper.hpp  PageRankParallel.cpp  PageRankReducer.cpp  PageRankReducer.hpp  PageRankValue.cpp  PageRankValue.hpp  PageRankValueReader.cpp  README
mapreduce2/src/app/PennySort/: PennySort.cpp  PennySort.ini  PennySortMapper.cpp  PennySortMapper.hpp  PennySortRecord.cpp  PennySortRecord.hpp  PennySortRecordSimple.cpp  PennySortReducer.cpp  PennySortReducer.hpp
mapreduce2/src/app/PennySort2/: PennySort.cpp  (+10 more)
mapreduce2/src/common/: AddressHelper.hpp  IceGenerated.hpp  String.hpp  Types.hpp
mapreduce2/src/master/: JobInfo.hpp  JobManager.cpp  JobManager.hpp  JobServiceImpl.cpp  JobServiceImpl.hpp  MasterConfig.cpp  MasterConfig.hpp  MasterDB.cpp  MasterDB.hpp  MasterDaemon.cpp  MasterDaemon.hpp  MasterException.hpp  MasterMain.cpp  MonitorServiceImpl.cpp  MonitorServiceImpl.hpp  Statistics.cpp  Statistics.hpp  TaskInfo.hpp  TaskManager.cpp  TaskManager.hpp  WorkerInfo.hpp  WorkerManager.cpp  WorkerManager.hpp  WorkerServiceImpl.cpp  WorkerServiceImpl.hpp
mapreduce2/src/sversion/: .README.swp  SMapReduce.cpp  SMapReduce.hpp
mapreduce2/src/util/: Config.hpp
mapreduce2/src/worker/: CMakeLists.txt  MapTask.cpp  MapTask.hpp  ReduceTask.cpp  ReduceTask.hpp  TransFile.cpp  TransFile.hpp  TransServer.cpp  TransServer.hpp  TransTask.cpp  TransTask.hpp  Worker.cpp  Worker.hpp  WorkerException.hpp  WorkerLogger.hpp  WorkerMain.cpp
mapreduce2/test/blackbox/: CMakeLists.txt
mapreduce2/test/unit/: CMakeLists.txt
tfs2/: CMakeLists.install  CMakeLists.txt  Doxyfile  README  mainpage.hpp  project.el
tfs2/dev/: README  tfs_master_class.ygf  tfs_monitor_arch.ygf
tfs2/dev/Hadoop/: Hadoop-GarbageCollection.doc  Hadoop_Client.doc
tfs2/dev/meeting_record/: meeting_record_070412.txt  meeting_record_070426.txt  tfs-20070516.txt  tfs-20070524.txt  tfs-20070531.txt  tfs-20070606.txt  tfs-20070621.txt  tfs-20070709.txt  tfs-20070717.txt  tfs-20070725.txt  tfs-20070814.txt  tfs-20070903.txt  tfs-20070913.txt  tfs-20070919.txt  tfs-20070926.txt  tfs-20080424.txt  tfs-20080508.txt  tfs-20080522.txt
tfs2/dev/paper/: SEWM2008-E070200.doc  tfs.tex  tfs_en.tex  tfs_write.ygf
tfs2/dev/project_report/: TFS-Agile Toolkit.doc  TFS-C++ Coding Standards.doc  TFS-Functional Feature List.doc  TFS-Glossary.doc  TFS-Project Report.doc  TFS-Supplementary Specification.doc  TFS-ThirdParty Library.doc
tfs2/dev/test_design/: TFS_test_architecture.ygf
tfs2/dev/tfs_core/: tfs_core.tex  tfswrite.ygf
tfs2/distrib/: CMakeLists.txt.examples  CMakeLists.txt.examples.ok  MakeCMakeFile4Examples.sh  README  local_system.tgz  tfs_chunkserver.ini  tfs_client.ini  tfs_master.ini
tfs2/distrib/admin/: README  configure
tfs2/distrib/script/: config.sh  logcheck.sh  shutdown.sh  startup.sh  status.sh
tfs2/doc/: README
tfs2/src/app/: App.cpp  CMakeLists.examples.txt  CMakeLists.txt  WordCreator.cpp  test.sav
tfs2/src/chunkserver/: ChunkManager.cpp  ChunkManager.hpp  ChunkServerConf.cpp  ChunkServerConf.hpp  ClientDaemon.cpp  ClientDaemon.hpp  Daemon.cpp  Daemon.hpp  Dealer.hpp  DiskManager.cpp  DiskManager.hpp  DiskUtil.cpp  DiskUtil.hpp  FileSystemUtil.cpp  FileSystemUtil.hpp  FileUtil.cpp  FileUtil.hpp  Main.cpp  MasterDaemon.cpp  MasterDaemon.hpp  Md5Mgr.cpp  Md5Mgr.hpp  MetaImgMgr.cpp  MetaImgMgr.hpp  README  RemoteDealer.cpp  RemoteDealer.hpp  String.hpp  SysDaemon.cpp  SysDaemon.hpp  TaskMgr.cpp  TaskMgr.hpp  TransferApp.hpp  TransferImpl.cpp  TransferImpl.hpp  XDealer.cpp  XDealer.hpp
tfs2/src/common/: ChunkServerHeader.hpp  Exception.hpp  IceGenerated.hpp  String.hpp  Types.hpp  stdint.h  stdint.h.unix
tfs2/src/fsdirectory/: ChunkMigration.hpp  ChunkTable.cpp  ChunkTable.hpp  DirNode.cpp  DirTreePath.cpp  FsDirectoryDebug.hpp  FsJournalManager.cpp  FsJournalManager.hpp  FsLog.cpp  FsLog.hpp  INode.cpp  INode.hpp  NewChunkTable.hpp
tfs2/src/mapred/: README  TfsFile.cpp  TfsFile.hpp  TfsFileImpl.cpp  TfsFileImpl.hpp
tfs2/src/master/: ActiveChunkManager.cpp  ActiveChunkManager.hpp  AddressHelper.hpp  AdminServiceImpl.cpp  AdminServiceImpl.hpp  ChunkHelper.hpp  ChunkServerInfo.hpp  ChunkServerManager.cpp  ChunkServerManager.hpp  ChunkServerMonitor.cpp  ChunkServerMonitor.hpp  ChunkServerServiceImpl.cpp  ChunkServerServiceImpl.hpp  ClientInfo.cpp  ClientInfo.hpp  ClientManager.cpp  ClientManager.hpp  ClientMonitor.cpp  ClientMonitor.hpp  ClientServiceImpl.cpp  ClientServiceImpl.hpp  GarbageCollection.cpp  GarbageCollection.hpp  MasterConfig.cpp  MasterConfig.hpp  MasterDB.cpp  MasterDB.hpp  MasterDaemon.cpp  MasterDaemon.hpp  MasterMain.cpp  Statistics.hpp
tfs2/src/util/: Config.hpp  Logger.hpp  Process.cpp  Process.hpp  Runnable.hpp  Thread.cpp  Thread.hpp
tfs2/test/: TestCxxTest.hpp
tfs2/test/blackbox/: .CMakeLists.txt.swp  CMakeLists.txt
tfs2/test/unit/: .CMakeLists.txt.swp  CMakeLists.sav  CMakeLists.txt
(+519 files in other folders)
